--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,24 +8,24 @@ on:
 
 jobs:
 
-  # sonar-cloud-build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  sonar-cloud-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Analyze with SonarCloud
-  #       uses: SonarSource/sonarcloud-github-action@v2
-  #       env:
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #       with:
-  #         args: >
-  #           -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
-  #           -Dsonar.organization=prayas-sharmaa
+      - name: Analyze with SonarCloud
+        uses: SonarSource/sonarcloud-github-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
+            -Dsonar.organization=prayas-sharmaa
 
   python-build:
     runs-on: ubuntu-latest
-    # needs: sonar-cloud-build
+    needs: sonar-cloud-build
     strategy:
       matrix:
         python-version: ['3.10']
@@ -65,7 +65,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest
 
-  Infrastructure:
+  infrastructure:
     runs-on: ubuntu-latest
     needs: docker-build
     env:
@@ -80,19 +80,7 @@ jobs:
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Check EB environment
-        id: ebe_check
-        run: |
-          if aws elasticbeanstalk describe-environments \
-              --region $AWS_REGION \
-              --environment-names "storemanagement-env" >/dev/null 2>&1; then
-              echo "exists=true" >> $GITHUB_OUTPUT
-          else
-              echo "exists=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Apply Terraform (deploy only once)
-        if: steps.ebe_check.outputs.exists == 'false'
+      - name: Terraform Init & Apply
         run: |
           cd terraform
           terraform init
@@ -100,49 +88,50 @@ jobs:
           terraform plan -out=tfplan
           terraform apply -auto-approve tfplan
 
-      - name: Terraform skipped
-        if: steps.ebe_check.outputs.exists == 'true'
-        run: echo "Elastic Beanstalk already deployed — skipping Terraform."
-
   deploy-to-eb:
     runs-on: ubuntu-latest
-    needs: Infrastructure
+    needs: infrastructure
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
       AWS_REGION: us-east-1
-      EB_APP_NAME: "storemanagement-app"
-      EB_ENV_NAME: "storemanagement-env"
+      EB_APP_NAME: ${{ secrets.EB_APP_NAME }}
+      EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
       DOCKERHUB_IMAGE: "${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest"
+      S3_BUCKET: ${{ secrets.S3_BUCKET }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install EB CLI
-        run: |
-          python -m pip install --upgrade pip
-          pip install awsebcli
-
       - name: Create Dockerrun.aws.json
         run: |
-          cat > Dockerrun.aws.json <<EOF
-{
-  "AWSEBDockerrunVersion": "1",
-  "Image": {
-    "Name": "${DOCKERHUB_IMAGE}",
-    "Update": "true"
-  },
-  "Ports": [
-    {
-      "ContainerPort": "8000"
-    }
-  ]
-}
-EOF
+          echo '{
+            "AWSEBDockerrunVersion": "1",
+            "Image": {
+              "Name": "'"${DOCKERHUB_IMAGE}"'",
+              "Update": "true"
+            },
+            "Ports": [
+              {
+                "ContainerPort": "8000"
+              }
+            ]
+          }' > Dockerrun.aws.json
 
-      - name: Deploy to Elastic Beanstalk
+      - name: Upload Dockerrun to S3
         run: |
-          eb init $EB_APP_NAME --region $AWS_REGION
-          eb use $EB_ENV_NAME
-          eb deploy
+          aws s3 cp Dockerrun.aws.json s3://${S3_BUCKET}/Dockerrun.aws.json
+
+      - name: Create new EB application version
+        run: |
+          aws elasticbeanstalk create-application-version \
+            --application-name $EB_APP_NAME \
+            --version-label github-${GITHUB_SHA} \
+            --source-bundle S3Bucket="${S3_BUCKET}",S3Key="Dockerrun.aws.json"
+
+      - name: Update EB environment
+        run: |
+          aws elasticbeanstalk update-environment \
+            --environment-name $EB_ENV_NAME \
+            --version-label github-${GITHUB_SHA}
