--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: DevSecOps CI/CD
+name: DevSecOps CI
 
 on:
   push:
@@ -11,15 +11,15 @@ jobs:
   sonar-cloud-build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: checkout code
         uses: actions/checkout@v4
 
       - name: Analyze with SonarCloud
         uses: SonarSource/sonarcloud-github-action@v2
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
         with:
-          args: >
+          args:
             -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
             -Dsonar.organization=prayas-sharmaa
 
@@ -29,21 +29,20 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.10']
+
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run Tests
-        run: python manage.py test
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Run Tests
+      run: |
+        python manage.py test
 
   docker-build:
     runs-on: ubuntu-latest
@@ -58,21 +57,22 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & Push Docker Image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest
 
-  infrastructure:
+  Infrastructure:
     runs-on: ubuntu-latest
     needs: docker-build
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-      AWS_REGION: us-east-1
+      AWS_REGION: "us-east-1"
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -80,7 +80,19 @@ jobs:
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Terraform Init & Apply
+      - name: Check if Elastic Beanstalk app exists
+        id: ebe_check
+        run: |
+          if aws elasticbeanstalk describe-environments \
+              --region $AWS_REGION \
+              --environment-names "storemanagement-env" >/dev/null 2>&1; then
+              echo "exists=true" >> $GITHUB_OUTPUT
+          else
+              echo "exists=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Skip or Run Terraform
+        if: steps.ebe_check.outputs.exists == 'false'
         run: |
           cd terraform
           terraform init
@@ -88,50 +100,6 @@ jobs:
           terraform plan -out=tfplan
           terraform apply -auto-approve tfplan
 
-  deploy-to-eb:
-    runs-on: ubuntu-latest
-    needs: infrastructure
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-      AWS_REGION: us-east-1
-      EB_APP_NAME: ${{ secrets.EB_APP_NAME }}
-      EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
-      DOCKERHUB_IMAGE: "${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest"
-      S3_BUCKET: ${{ secrets.S3_BUCKET }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Create Dockerrun.aws.json
-        run: |
-          echo '{
-            "AWSEBDockerrunVersion": "1",
-            "Image": {
-              "Name": "'"${DOCKERHUB_IMAGE}"'",
-              "Update": "true"
-            },
-            "Ports": [
-              {
-                "ContainerPort": "8000"
-              }
-            ]
-          }' > Dockerrun.aws.json
-
-      - name: Upload Dockerrun to S3
-        run: |
-          aws s3 cp Dockerrun.aws.json s3://${S3_BUCKET}/Dockerrun.aws.json
-
-      - name: Create new EB application version
-        run: |
-          aws elasticbeanstalk create-application-version \
-            --application-name $EB_APP_NAME \
-            --version-label github-${GITHUB_SHA} \
-            --source-bundle S3Bucket="${S3_BUCKET}",S3Key="Dockerrun.aws.json"
-
-      - name: Update EB environment
-        run: |
-          aws elasticbeanstalk update-environment \
-            --environment-name $EB_ENV_NAME \
-            --version-label github-${GITHUB_SHA}
+      - name: Terraform skipped (EB already deployed)
+        if: steps.ebe_check.outputs.exists == 'true'
+        run: echo "Elastic Beanstalk already deployed — skipping Terraform." 
