--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: DevSecOps CI
+name: DevSecOps CI-CD EB
 
 on:
   push:
@@ -11,13 +11,13 @@ jobs:
   sonar-cloud-build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Analyze with SonarCloud
         uses: SonarSource/sonarcloud-github-action@v2
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args:
             -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
@@ -29,20 +29,20 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.10']
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        python manage.py test
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run Tests
+        run: python manage.py test
 
   docker-build:
     runs-on: ubuntu-latest
@@ -71,7 +71,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-      AWS_REGION: "us-east-1"
+      AWS_REGION: us-east-1
 
     steps:
       - name: Checkout code
@@ -80,26 +80,58 @@ jobs:
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Check if Elastic Beanstalk app exists
+      - name: Check if Elastic Beanstalk environment exists
         id: ebe_check
         run: |
           if aws elasticbeanstalk describe-environments \
               --region $AWS_REGION \
-              --environment-names "storemanagement-env" >/dev/null 2>&1; then
+              --environment-names "${{ secrets.EB_ENV_NAME }}" >/dev/null 2>&1; then
               echo "exists=true" >> $GITHUB_OUTPUT
           else
               echo "exists=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Skip or Run Terraform
+      - name: Run Terraform (first deployment only)
         if: steps.ebe_check.outputs.exists == 'false'
         run: |
           cd terraform
           terraform init
           terraform validate
-          terraform plan -out=tfplan
-          terraform apply -auto-approve tfplan
+          terraform apply -auto-approve
 
-      - name: Terraform skipped (EB already deployed)
+      - name: Terraform Skipped
         if: steps.ebe_check.outputs.exists == 'true'
-        run: echo "Elastic Beanstalk already deployed — skipping Terraform." 
+        run: echo "Elastic Beanstalk already deployed — skipping Terraform."
+
+  deploy-eb:
+    runs-on: ubuntu-latest
+    needs: Infrastructure
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+      AWS_REGION: us-east-1
+      EB_APP_NAME: ${{ secrets.EB_APP_NAME }}
+      EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install EB CLI
+        run: |
+          pip install awsebcli
+
+      - name: Initialize EB CLI
+        run: |
+          eb init "$EB_APP_NAME" \
+            --platform "Docker" \
+            --region "$AWS_REGION" \
+            --keypair "eb-key"
+      
+      - name: Set EB environment
+        run: |
+          eb use "$EB_ENV_NAME"
+
+      - name: Deploy to Elastic Beanstalk
+        run: eb deploy "$EB_ENV_NAME"
