--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -105,33 +105,33 @@ jobs:
   deploy-eb:
     runs-on: ubuntu-latest
     needs: Infrastructure
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-      AWS_REGION: us-east-1
-      EB_APP_NAME: ${{ secrets.EB_APP_NAME }}
-      EB_ENV_NAME: ${{ secrets.EB_ENV_NAME }}
+    name: Deploy to Elastic Beanstalk
   
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
   
-      - name: Install EB CLI
-        run: |
-          pip install --upgrade pip
-          pip install awsebcli
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: us-east-1
   
-      - name: Initialize EB CLI
+      - name: Create Elastic Beanstalk bundle
         run: |
-          eb init "$EB_APP_NAME" \
-            --platform "Docker" \
-            --region "$AWS_REGION"
-  
-      - name: Set EB environment
-        run: |
-          eb use "$EB_ENV_NAME"
+          zip -r deploy.zip Dockerrun.aws.json || echo "No .elasticbeanstalk folder found, bundling Dockerrun only"
   
       - name: Deploy to Elastic Beanstalk
-        run: eb deploy "$EB_ENV_NAME"
+        uses: einaregilsson/beanstalk-deploy@v22
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_session_token: ${{ secrets.AWS_SESSION_TOKEN }}
+          application_name: ${{ secrets.EB_APP_NAME }}
+          environment_name: ${{ secrets.EB_ENV_NAME }}
+          region: us-east-1
+          version_label: v-${{ github.run_number }}
+          deployment_package: deploy.zip
+
 
