--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,46 +8,46 @@ on:
 
 jobs:
 
-  # sonar-cloud-build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  sonar-cloud-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Analyze with SonarCloud
-  #       uses: SonarSource/sonarcloud-github-action@v2
-  #       env:
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #       with:
-  #         args: >
-  #           -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
-  #           -Dsonar.organization=prayas-sharmaa
+      - name: Analyze with SonarCloud
+        uses: SonarSource/sonarcloud-github-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=Prayas-sharmaa_DevSecOps
+            -Dsonar.organization=prayas-sharmaa
 
-  # python-build:
-  #   runs-on: ubuntu-latest
-  #   needs: sonar-cloud-build
-  #   strategy:
-  #     matrix:
-  #       python-version: ['3.10']
-  #   steps:
-  #     - uses: actions/checkout@v4
+  python-build:
+    runs-on: ubuntu-latest
+    needs: sonar-cloud-build
+    strategy:
+      matrix:
+        python-version: ['3.10']
+    steps:
+      - uses: actions/checkout@v4
 
-  #     - name: Set up Python
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: ${{ matrix.python-version }}
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
-  #     - name: Install Dependencies
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         pip install -r requirements.txt
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-  #     - name: Run Tests
-  #       run: python manage.py test
+      - name: Run Tests
+        run: python manage.py test
 
   docker-build:
     runs-on: ubuntu-latest
-    # needs: python-build
+    needs: python-build
     steps:
       - uses: actions/checkout@v4
 
@@ -64,48 +64,47 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/storemanagement:latest
 
-  # Infrastructure:
-  #   runs-on: ubuntu-latest
-  #   needs: docker-build
-  #   env:
-  #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #     AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-  #     AWS_REGION: us-east-1
-  #   steps:
-  #     - uses: actions/checkout@v4
+  Infrastructure:
+    runs-on: ubuntu-latest
+    needs: docker-build
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+      AWS_REGION: us-east-1
+    steps:
+      - uses: actions/checkout@v4
 
-  #     - name: Install Terraform
-  #       uses: hashicorp/setup-terraform@v3
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v3
 
-  #     - name: Check EB environment
-  #       id: ebe_check
-  #       run: |
-  #         if aws elasticbeanstalk describe-environments \
-  #             --region $AWS_REGION \
-  #             --environment-names "${{ secrets.EB_ENV_NAME }}" >/dev/null 2>&1; then
-  #             echo "exists=true" >> $GITHUB_OUTPUT
-  #         else
-  #             echo "exists=false" >> $GITHUB_OUTPUT
-  #         fi
+      - name: Check EB environment
+        id: ebe_check
+        run: |
+          if aws elasticbeanstalk describe-environments \
+              --region $AWS_REGION \
+              --environment-names "${{ secrets.EB_ENV_NAME }}" >/dev/null 2>&1; then
+              echo "exists=true" >> $GITHUB_OUTPUT
+          else
+              echo "exists=false" >> $GITHUB_OUTPUT
+          fi
 
-  #     - name: Apply Terraform (first deployment only)
-  #       if: steps.ebe_check.outputs.exists == 'false'
-  #       run: |
-  #         cd terraform
-  #         terraform init
-  #         terraform validate
-  #         terraform plan -out=tfplan
-  #         terraform apply -auto-approve
+      - name: Apply Terraform (first deployment only)
+        if: steps.ebe_check.outputs.exists == 'false'
+        run: |
+          cd terraform
+          terraform init
+          terraform validate
+          terraform plan -out=tfplan
+          terraform apply -auto-approve
 
-  #     - name: Terraform skipped
-  #       if: steps.ebe_check.outputs.exists == 'true'
-  #       run: echo "Elastic Beanstalk already deployed — skipping Terraform."
+      - name: Terraform skipped
+        if: steps.ebe_check.outputs.exists == 'true'
+        run: echo "Elastic Beanstalk already deployed — skipping Terraform."
 
   deploy-eb:
     runs-on: ubuntu-latest
-    # needs: Infrastructure
-    needs: docker-build
+    needs: Infrastructure
     name: Deploy to Elastic Beanstalk
   
     steps:
