--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -189,13 +189,28 @@ jobs:
   
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
   
-      - name: ZAP Baseline Scan
+      - name: Run ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: "http://storewebapp.us-east-1.elasticbeanstalk.com"
           rules_file_name: ".zap/rules.tsv"
           cmd_options: "-a"
+          fail_action: false
+  
+      - name: Move ZAP Reports to predictable filenames
+        run: |
+          mkdir -p zap-output
+          cp report_html.html zap-output/zap-report.html || true
+          cp report_json.json zap-output/zap-report.json || true
+          cp report_md.md zap-output/zap-report.md || true
+  
+      - name: Upload ZAP Report Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-scan-report
+          path: zap-output/
+          retention-days: 7
 
 
