--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -185,11 +185,11 @@ jobs:
   zap-scan:
     name: OWASP ZAP Baseline Scan
     runs-on: ubuntu-latest
-    needs: docker-build
+    needs: deploy-eb
   
     steps:
       - name: Checkout Code
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
   
       - name: Run ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
@@ -199,7 +199,7 @@ jobs:
           cmd_options: "-a"
           fail_action: false
   
-      - name: Move ZAP Reports to predictable filenames
+      - name: Prepare ZAP Output
         run: |
           mkdir -p zap-output
           cp report_html.html zap-output/zap-report.html || true
@@ -212,5 +212,6 @@ jobs:
           name: zap-scan-report
           path: zap-output/
           retention-days: 7
+
 
 
